// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component - NewbieSelect renders correctly 1`] = `
<div
  data-testid="newbie-select-page"
>
  <Navbar
    onClick={[Function]}
    type="menu"
  />
  <article
    className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-5 MuiGrid-direction-xs-column"
  >
    <div
      className="MuiGrid-root MuiGrid-item"
    >
      <Typography
        component="h2"
        variant="h2"
      >
        Your New Joiners
      </Typography>
      <Typography
        className="makeStyles-subTitle-2"
        component="p"
        variant="body2"
      >
        Don’t forget to complete all tasks
      </Typography>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item"
    >
      <CircularProgress />
    </div>
  </article>
  <PlusButton
    className="makeStyles-fab-5"
  />
</div>
`;

exports[`Component - NewbieSelect renders correctly 2`] = `
<div
  data-testid="newbie-select-page"
>
  <Navbar
    onClick={[Function]}
    type="menu"
  />
  <article
    className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-5 MuiGrid-direction-xs-column"
  >
    <div
      className="MuiGrid-root MuiGrid-item"
    >
      <Typography
        component="h2"
        variant="h2"
      >
        Your New Joiners
      </Typography>
      <Typography
        className="makeStyles-subTitle-2"
        component="p"
        variant="body2"
      >
        Don’t forget to complete all tasks
      </Typography>
    </div>
  </article>
  <PlusButton
    className="makeStyles-fab-5"
  />
</div>
`;
